adding final code for the snake game

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <script>
 
 window.onload=function(){
-    canvas = document.getElementById("gc");
+    canv = document.getElementById("gc");
     ctx = canv.getContext("2d");
-    document.addEventListener("Keydown", keyPush);
+    document.addEventListener("keydown", keyPush);
     setInterval(game, 1000/15);
 }
 
@@ -32,11 +32,11 @@ function game(){
     ctx.fillStyle="black";
     ctx.fillRect(0,0,canv.width, canv.height);
 
-    ctx.fillStyle="line";
+    ctx.fillStyle="lime";
     for(var i = 0; i<trail.length; i++){
-        ctx.fillRect(trail[i].x*gs, trail[i].y.gs, gs-2, gs-2);
+        ctx.fillRect(trail[i].x*gs, trail[i].y*gs, gs-2, gs-2);
         if(trail[i].x == px && trail[i].y==py){
-            trail = 5;
+            tail = 5;
         }
     }
 
@@ -45,7 +45,7 @@ function game(){
         trail.shift();
     }
 
-    if(ax==px &&  ay==py{
+    if(ax==px &&  ay==py){
         tail++;
         ax=Math.floor(Math.random()*tc);
         ay=Math.floor(Math.random()*tc);
@@ -64,10 +64,10 @@ function keyPush(evt){
             xv = 0; yv= -1;
             break;
         case 39:
-            xv=0; yv=0;
+            xv=1; yv=0;
             break;
         case 40:
-            xy=0; yv=0;
+            xv=0; yv=1;
             break;
     }
 }
